--- a/.gitignore
+++ b/.gitignore
@@ -108,12 +108,9 @@ dist
 build/
 *.docx
 .vscode/
+Documentation/
 
 # Backup
 backup.bat
 Backup_Excludes.txt
 backup/
-
-# BW Local
-history
-vscode
